<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itp341.wang.cherrie.a7.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/solve"
            android:id="@+id/textView" />

        <TextView
            android:text="@string/clue1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:textColor="#FF0000"
            android:id="@+id/textClue1" />

        <TextView
            android:text="@string/clue2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="34dp"
            android:textColor="#FF0000"
            android:id="@+id/textClue2" />

        <TextView
            android:text="@string/clue3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="34dp"
            android:textColor="#FF0000"
            android:id="@+id/textClue3" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" >

            <Button
                android:text="Room 1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDoorOne"
                android:layout_weight="1" />

            <Button
                android:text="Room 2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDoorTwo"
                android:layout_weight="1" />

            <Button
                android:text="Room 3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDoorThree"
                android:layout_weight="1" />
        </LinearLayout>
        <Button
            android:text="Solve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSolve"
            android:layout_gravity="center"/>
    </LinearLayout>

</RelativeLayout>
